# hameln-publish

./: Cargo.toml  readme.md
src/: html.template  main.rs
