[package]
name = "hameln-publish"
version = "0.1.0"
authors = ["SAITO Atsushi <maldikulo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.structopt]
version = "0.3.21"

[dependencies.thin-http]
git = "https://github.com/SaitoAtsushi/thin-http"
branch = "master"

[dependencies.epub-builder]
version = "0.4.8"
default-features = false
features = ["zip-library"]

[profile.release]
lto = true
codegen-units = 1
